feat: add soft deletes for reviews
